# brewing-api

./: .gcloudignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  deploy.sh  docker-compose.yml  local.sh  pyproject.toml
app/: main.py  viz.py
app/models/: brewing_repository.py  brewings_repository.py  device_repository.py  entity.py  firerepository.py  ping.py  ping_repository.py  repository.py
app/services/: bigquery_service.py  firestore_service.py  forward_service.py  ping_factory.py
app/viz/assets/: main.css
config/: .env_template
infrastructure/: main.tf  variables.tf
infrastructure/schemas/: pings.json
